src/App.css
/* ... */
.projectboard-desc-and-comments {
  display: flex;
  max-width: 100vw;
  max-height: 30rem;
}

/* PROJECTBOARD MODAL FOR CREATING TICKETS ************************/

.projectboard-ticket-modal {
  position: absolute;
  background-color: rgb(240,242,245);
  z-index: 10;
  min-height: 20rem;
  width: 50%;
  border: 3px solid rgba(110, 104, 242, 1);
  border-radius: 5px;
  left: 0;
  right: 0;
  margin: 1rem auto;
}

.projectboard-ticket-modal h2 {
  color: rgba(36,27,242, 1);
  font-weight: bold;
  margin: 1rem;
  text-align: center;
}

.projectboard-ticket-modal form {
  display: flex;
  flex-direction: column;
  margin: 1rem 3rem;
}

.projectboard-ticket-modal label {
  color: rgba(36,27,242, 1);
  font-weight: bold;
}

.projectboard-ticket-modal input[type=text], select {
  width: 100%;
  padding: 0.5rem 1rem;
  margin: 0.25rem 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 5px;
  box-sizing: border-box;
  font-size: 1rem;
}

.projectboard-ticket-modal input[type=submit] {
  width: 100%;
  background-color: #4CAF50;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.projectboard-ticket-modal input[type=submit]:hover {
  background-color: red;
}

.projectboard-ticket-modal input:last-of-type {
  margin-bottom: 2rem;
}

.projectboard-ticket-modal button {
  min-height: 3rem;
  min-width: 7rem;
  margin: 0.25rem;
  padding: 0.25rem;
  cursor: pointer;
  font-weight: 900;
  border-radius: 5px;
}

.projectboard-ticket-modal-btns {
  display: flex;
  justify-content: space-around;
}

.submit-modalBtn {
  background-color: #6CDC03;
  border: solid 3px #6CDC03;
}

.submit-modalBtn:hover {
  background-color: #76EF04;
  border: solid 3px #76EF04;
}

.cancel-modalBtn {
  background-color: #EE2604;
  border: solid 3px #EE2604;
  color: white;
}

.cancel-modalBtn:hover {
  background-color: #e85f48;
  border: solid 3px #e85f48;
}



/* PROJECTTEAM CARD ***********************************************/

.projectteam-container {
  margin: 1rem;
  background-color: white;
  border: 1px solid white;
  border-radius: 5px;
  -webkit-box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36); 
  box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36);
  min-width: 43%;
}

.projectteam-title {
  display: flex;
  justify-content: space-between;
}

.projectteam-title h4 {
  padding: 0 1rem;
}

.projectteam-title button {
  background-color: rgba(36,27,242, 1);
  color: white;
  font-weight: bold;
  padding: 0 1rem;
  margin: 1rem;
  border: 3px solid rgba(36,27,242, 1);
  border-radius: 5px;
  cursor: pointer;
  transition: 0.2s ease-in-out;
}

.projectteam-title button:hover {
  background-color: rgba(36,27,242, 0.8);
  border: 3px solid rgba(36,27,242, 0.8);
  border-radius: 5px;
  transition: 0.3s ease-in-out;
}

.projectteam-table table {
  margin: 0.4rem auto;
  text-align: center;
  border-collapse: collapse;
  font-size: 0.9em;
  min-width: 100%;
}

.projectteam-table th {
  text-align: left;
  background-color: rgba(36,27,242, 0.15);
  font-weight: bold;
}

.projectteam-table td {
  text-align: left;
}

.projectteam-table th, .projectteam-table td {
  padding: 0.5rem 0.5rem;
}

.projectteam-table tr {
  border-bottom: 1px solid rgba(230, 230, 230, 1);
}

.projectteam-table tr:last-of-type {
  border-bottom: 4px solid rgba(36,27,242, 0.15);
}

/* PROJECTTICKETS CARD ********************************************/

.projecttickets-container {
  margin: 1rem;
  background-color: white;
  border: 1px solid white;
  border-radius: 5px;
  -webkit-box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36); 
  box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36);
  max-width: 43%;
  max-height: 25rem;
  overflow: hidden;
}

.projecttickets-title {
  display: flex;
  justify-content: space-between;
}

.projecttickets-title h4 {
  padding: 0 1rem;
}

.faPlus-btn{
  font-size: 1.25rem;
}

.projecttickets-title button {
  background-color: rgba(36,27,242, 1);
  color: white;
  font-weight: bold;
  padding: 0 1rem;
  margin: 1rem;
  border: 3px solid rgba(36,27,242, 1);
  border-radius: 5px;
  cursor: pointer;
  transition: 0.2s ease-in-out;
}

.projecttickets-title button:hover {
  background-color: rgba(36,27,242, 0.8);
  border: 3px solid rgba(36,27,242, 0.8);
  border-radius: 5px;
  transition: 0.3s ease-in-out;
}

.status-and-priority{
  display: flex;
}

.projecttickets-td {
  overflow: auto;
  max-height: 18rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.projecttickets-table table {
  margin: 0.4rem auto;
  border-collapse: collapse;
  font-size: 0.9em;
  min-width: 100%;
}

.projecttickets-table th {
  text-align: center;
  background-color: rgba(36,27,242, 0.15);
  font-weight: bold;
}

.projecttickets-table td {
  text-align: left;
}

.projecttickets-table th, .projecttickets-table td {
  padding: 0.5rem 0.5rem;
}

.projecttickets-table th:last-of-type {
  text-align: right;
  padding-right: 2rem;
}

.projecttickets-table tr {
  border-bottom: 1px solid rgba(230, 230, 230, 1);
}

.projecttickets-table tr:last-of-type {
  border-bottom: 4px solid rgba(36,27,242, 0.15);
}

.projecttickets-td tr:hover {
  background-color:  rgba(110, 104, 242, 1);
  color: white;
  transition: ease-in-out 0.2s;
  cursor: pointer;
}

/* PROJECT TICKETS MODAL CLASS NAMES NEED TO BE CHANGED!!!!!!!!!!!!!!!!!!!!!!!*/

.dashboard-project-modal {
  position: absolute;
  background-color: rgba(110, 104, 242, 1);
  z-index: 10;
  min-height: 20rem;
  width: 40%;
  border: 3px solid rgba(110, 104, 242, 1);
  border-radius: 10px;
  left: 0;
  right: 0;
  margin: 5rem auto;
}

.dashboard-project-modal h2 {
  color: white;
  font-weight: bold;
  margin: 1rem;
  text-align: center;
}

.dashboard-project-modal form {
  display: flex;
  flex-direction: column;
  margin: 1rem 3rem;
}

.dashboard-project-modal label {
  color: white;
  font-weight: bold;
}
/* ... */

